<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="empty"></string>
    <string name="app_name">NetCap</string>
    <string name="devicesTV">Device:</string>
    <string name="any">Any</string>
    <string name="refreshBT">Refresh</string>
    <string name="loadCaptureBT">Load capture from file</string>
	<string name="outputCaptureTV">Save capture into:</string>
	<string name="promiscuousCB">Use promiscuous mode</string>
	<string name="action_cancel">Cancel</string>
	<string name="search">Search</string>
    <string name="search_id">ID</string>
    <string name="search_time">Time</string>
    <string name="search_protocol">Protocol</string>
    <string name="search_info">Info</string>
    <string name="recentlyOpenTV">Recently open:</string>
    
    <string name="toggleOn">Start capture</string>
    <string name="toggleOff">Stop capture</string>
    <string name="root_error">A rooted device is required for the capture feature.</string>
    <string name="root_toast_error">Device not rooted.</string>
</resources>
