<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLL"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/searchTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <EditText
        android:id="@+id/searchET"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/idCB"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/search_id" />

            <CheckBox
                android:id="@+id/protocolCB"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/search_protocol" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/timeCB"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/search_time" />

            <CheckBox
                android:id="@+id/infoCB"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/search_info" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>