<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        

        <!-- Save -->
        <TextView
            android:id="@+id/outputCaptureTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outputCaptureTV"
            android:textColor="@color/blue_normal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/browseOutputCaptureTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:text="@string/empty"
            android:textSize="18sp" />
        
        <!-- Devices -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15sp"
            android:weightSum="4" >

            <TextView
                android:id="@+id/devicesTV"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:layout_weight="1"
                android:text="@string/devicesTV"
                android:textColor="@color/blue_normal"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/devicesSp"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <Button
            android:id="@+id/refreshBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/refreshBT"/>
        
        <!-- Promiscuous mode -->
        <CheckBox
            android:id="@+id/promiscuousCB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/promiscuousCB"
            android:checked="true"
            android:textColor="@color/blue_normal"
            android:textSize="18sp" />
        
        <ToggleButton
            android:id="@+id/captureBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textOff="@string/toggleOn"
            android:textOn="@string/toggleOff" />
        
        <TextView
            android:id="@+id/showResult"
            android:background="@drawable/back"
            android:layout_marginTop="5sp"
            android:lines="12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:maxLines="20"
			android:scrollbars="vertical"
            android:textSize="12sp" />
    </LinearLayout>

</ScrollView>