<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp" >

        <!-- Devices -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <TextView
                android:id="@+id/devicesTV"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:layout_weight="1"
                android:text="@string/devicesTV"
                android:textColor="@color/blue_normal"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/devicesSp"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <Button
            android:id="@+id/refreshBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@drawable/flat_selector"
            android:onClick="actionRefresh"
            android:text="@string/refreshBT"
            android:textColor="@android:color/white" />

        <!-- Save -->
        <TextView
            android:id="@+id/outputCaptureTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/outputCaptureTV"
            android:textColor="@color/blue_normal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/browseOutputCaptureTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:text="@string/empty"
            android:textSize="18sp" />

        <Button
            android:id="@+id/browseOutputCaptureBT"
            android:layout_marginTop="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/flat_selector"
            android:onClick="actionBrowseOutputCapture"
            android:text="@string/browseBT"
            android:textColor="@android:color/white" />
        
        <!-- Promiscuous mode -->
        <CheckBox
            android:id="@+id/promiscuousCB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/promiscuousCB"
            android:checked="true"
            android:textColor="@color/blue_normal"
            android:textSize="18sp" />
        
        <Button
            android:id="@+id/startCaptureBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:background="@drawable/flat_selector"
            android:onClick="actionStartCapture"
            android:text="@string/startCaptureBT"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>