<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:fillViewport="true" >
	    
    

    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="30dp" >
	        
	    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:weightSum="4" >
			<TextView
				    android:id="@+id/devicesTV"
				    android:layout_width="0sp"
				    android:layout_height="wrap_content"
				    android:textSize="18sp"
	            	android:textColor="@color/blue_normal"
	            	android:layout_marginEnd="5sp"
				    android:text="@string/devicesTV"
				    android:layout_weight="1"/>
			<Spinner
				    android:id="@+id/devicesSp"
				    android:layout_width="0sp"
				    android:layout_height="wrap_content"
				    android:layout_weight="2" />
			
			<Button
		            android:id="@+id/refreshBT"
		            android:layout_width="0sp"
		            android:layout_height="26dp"
		            android:background="@drawable/flat_selector"
		            android:text="@string/refreshBT"
			    	android:onClick="actionRefresh"
				    android:layout_weight="1"
		            android:textColor="@android:color/white" />

   		</LinearLayout>

	    
		<TextView
			    android:id="@+id/outputCaptureTV"
	            android:layout_marginTop="15sp"
	            android:layout_marginBottom="5sp"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:textSize="18sp"
            	android:textColor="@color/blue_normal"
			    android:text="@string/outputCaptureTV"/>
		
	    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:weightSum="3" >
			<TextView
				    android:id="@+id/browseTV"
				    android:layout_width="0sp"
				    android:layout_height="wrap_content"
				    android:textSize="18sp"
	            	android:layout_marginEnd="5sp"
				    android:text="@string/empty"
				    android:background="@drawable/back"
				    android:layout_weight="2"/>
			
			<Button
		            android:id="@+id/browseBT"
		            android:layout_width="0sp"
		            android:layout_height="26dp"
		            android:background="@drawable/flat_selector"
		            android:text="@string/browseBT"
			    	android:onClick="actionBrowse"
				    android:layout_weight="1"
		            android:textColor="@android:color/white" />
			
	    </LinearLayout>
   		
    </LinearLayout>
    
</ScrollView>